err/botmotion.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BOTMotion-0.2.egg-info'...
Listing './lib/python3.5/site-packages/botmotion'...
Compiling './lib/python3.5/site-packages/botmotion/bot_motion.py'...
***   File "./lib/python3.5/site-packages/botmotion/bot_motion.py", line 131
    print BotMotion.address_port_list[index][1], BotMotion.address_port_list[index][2]
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/botmotion/controller.py'...
***   File "./lib/python3.5/site-packages/botmotion/controller.py", line 108
    print '[VelCalc] Exit Thread...'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/botmotion/ethernet_socket.py'...
***   File "./lib/python3.5/site-packages/botmotion/ethernet_socket.py", line 137
    except socket.error as (value,message):
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/botmotion/init_drive.py'...
***   File "./lib/python3.5/site-packages/botmotion/init_drive.py", line 29
    print 'Searching nodes...'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/netifaces-0.10.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
